# PenTool

./: .gitignore  BUILDING_WINDOWS.md  Build-PenTool.ps1  CMakeLists.txt  README.md
include/: AnnotationNode.h  PenOverlay.h  PenStroke.h
python/: menu.py
src/: AnnotationNode.cpp  PenOverlay.cpp  PenStroke.cpp  PenTool.cpp
